# ffxiv-crafting-assistant

./: .gitignore  Cargo.toml  README.md  index.html
src/: main.rs
src/items/: item_lists.rs  mod.rs  spec.rs
src/profile/: abilities.rs  ability_lists.rs  classes.rs  mod.rs
src/simulation/: ability.rs  mod.rs  random.rs  state.rs  traversal.rs
