[package]
name = "ffxiv-crafting-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
web-sys = { version = "0.3.56", features = ["HtmlSelectElement"] }
log = "0.4.6"
wasm-logger = "0.2"
bitflags = "1.3.2"
getrandom = { version = "0.2", features = ["js"] }